examples/test/testpolicy15612.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15612
  namespace: namespace467
spec:
  podSelector:
    matchLabels:
      key45: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value18
          key10: value39
      podSelector:
        matchLabels:
          key3: value28
          key13: value4
